--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "db-pagination",
   "version": "1.0.0",
   "description": "A function to paginate an array of primary keys that came from the db",
-  "main": "get_page.ts",
+  "main": "src/get_page.ts",
   "scripts": {
     "test": "jest --coverage",
     "prepare": "husky install"
